Diseño preliminar para github pages

--- a/index.html
+++ b/index.html
@@ -1,3 +1,26 @@
-<h1>Este es un sitio web con Github Pages</h1>
-<p>Creado con mucho amor en el curso de Git y Github de platzi</p>
-<p><img src="https://imgur.com/ZLKOuzg.gif" /></p>
+<html>
+    <head>
+        <title>franco Ramirez Site</title>
+        <link rel="stylesheet" href="css/estilos.css" />
+    </head>
+    <body>
+        <div id="container">
+            <div id="cabecera">
+                Franco Andrés Ramirez Villarroel
+                <span id="tagline">Data Engineer|BI Developer</span>
+            </div>
+            <div id="post">
+                <h1>Acerca de mí</h1>
+                <p>Ingeniero en Informática,Analista Programador computacional y Técnico en Electrónica Nivel medio. Profesional orientado al área de Ingeniería de datos,
+                Bussiness Intelligence y Análisis de datos, áreas en las que deseo expandir mis conocimientos y experiencia. Soy un profesional responsable, diligente y con 
+                muchas ganas de innovar. Debido a que me he desempeñado en diversos niveles en el área de informática, poseo gran capacidad para trabajar en equipo y tomar 
+                decisiones en situaciones críticas o bajo presión, habilidades de análisis y resolución de problemas, capacidad de aprendizaje, transparencia y con una clara
+                orientación al logro de resultados.</p>
+
+                <p><img src="https://imgur.com/ZLKOuzg.gif" /></p>
+            </div>
+        </div>
+    </body>
+</html>
+
+
