Correción en Título

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>franco Ramirez Site</title>
+        <title>Franco Ramirez|Data Engineer - BI Developer</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
